--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "vite preview",
+    "start": "serve -s dist",
     "lint": "eslint .",
     "preview": "vite preview"
   },
